--- a/projects/myrmidon/cadmus-itinera-part-ms-ui/src/lib/ms-guard-sheet/ms-guard-sheet.component.html
+++ b/projects/myrmidon/cadmus-itinera-part-ms-ui/src/lib/ms-guard-sheet/ms-guard-sheet.component.html
@@ -82,6 +82,7 @@
       color="warn"
       mat-icon-button
       matTooltip="Discard guard sheet changes"
+      (click)="cancel()"
     >
       <mat-icon>clear</mat-icon>
     </button>
