--- a/projects/myrmidon/cadmus-itinera-part-ms-ui/src/lib/ms-section/ms-section.component.html
+++ b/projects/myrmidon/cadmus-itinera-part-ms-ui/src/lib/ms-section/ms-section.component.html
@@ -60,6 +60,7 @@
       color="warn"
       mat-icon-button
       matTooltip="Discard section changes"
+      (click)="cancel()"
     >
       <mat-icon>clear</mat-icon>
     </button>
