Added MsPoemRangesPart editor

--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -12,7 +12,7 @@
   font-size: 100px;
   font-weight: normal;
   letter-spacing: -5px;
-  color: #9c6656;
+  color: #ac7666;
 }
 article {
   column-width: 600px;
