--- a/projects/myrmidon/cadmus-itinera-ui/src/lib/components/physical-size/physical-size.component.html
+++ b/projects/myrmidon/cadmus-itinera-ui/src/lib/components/physical-size/physical-size.component.html
@@ -153,9 +153,14 @@
     </mat-form-field>
 
     <!-- note -->
-    <mat-form-field>
-      <input matInput [formControl]="note" placeholder="note">
-      <mat-error *ngIf="note.errors?.maxLength && (note.dirty || note.touched)">note too long</mat-error>
-    </mat-form-field>
+    <div>
+      <mat-form-field>
+        <input matInput [formControl]="note" placeholder="note" />
+        <mat-error
+          *ngIf="note.errors?.maxLength && (note.dirty || note.touched)"
+          >note too long</mat-error
+        >
+      </mat-form-field>
+    </div>
   </div>
 </form>
